--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <main>
     <div class="info">
-        <h1>Welcome to the FIGHT!!!<span class="player-self"></span></h1>
+        <h1>Welcome to the Game</h1>
         <h2></h2>
     </div>
     <div class="players-seats">
