--- a/index.html
+++ b/index.html
@@ -26,27 +26,9 @@
         <button>Reset Game</button>
     </div>
 </main>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
+<!-- The core Firebase JS SDK and the database library -->
 <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-database.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<!--<script>-->
-<!--  // Your web app's Firebase configuration-->
-<!--  const firebaseConfig = {-->
-<!--    apiKey: 'AIzaSyCvFlF_-RvHpUSt4EISWYUZD9-nE7mbXBI',-->
-<!--    authDomain: 'tic-tac-toe-5a414.firebaseapp.com',-->
-<!--    databaseURL: 'https://tic-tac-toe-5a414.firebaseio.com',-->
-<!--    projectId: 'tic-tac-toe-5a414',-->
-<!--    storageBucket: 'tic-tac-toe-5a414.appspot.com',-->
-<!--    messagingSenderId: '819894234646',-->
-<!--    appId: '1:819894234646:web:bb289aaa2a688da6bb8f37',-->
-<!--  };-->
-<!--  // Initialize Firebase-->
-<!--  firebase.initializeApp(firebaseConfig);-->
-<!--</script>-->
 <script type="application/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
