Fixed the CSS loading bug where non-styled elements appear momentarily

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Tic Tac Toe Network Edition</title>
+    <style>
+        main {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 <main>
